--- a/betRef/betRef_1.html
+++ b/betRef/betRef_1.html
@@ -2,127 +2,93 @@
     <!-- 新聞內頁 -->
     <div class="newsRef_box">
         <div class="newsRef_cnt">
+
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
+                <p>
+                    <span class="selfTxt" style="font-weight:bold;">VNC88.com</span>Với mong muốn có thể cung cấp cho người chơi những trò chơi với nền tảng công nghệ trực tuyến hiện đại, chất lượng cao, mang lại trải nghiệm tốt nhất, Fun88 đã hợp tác
+                    với rất nhiều đối tác là các công ty phần mềm trò chơi uy tín nhất thế giới hiện nay như One Works, Microgaming, Entwine, Crown Casino, Playtech, Betsoft, Gold Deluxe, Bodog…
+                </p>
+            </div>
+
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/betRef1-01.gif">
+            </div>
+
             <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>CHÍNH THỨC: Man Utd công bố bom tấn thứ 2 sau Sancho</p>
-                <!-- 標題時間 -->
-                <div class="txtDate">01:11 Thứ tư 28/07/2021 </div>
+                <p>Fun88 mang tới dịch vụ cá cược hàng đầu</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span> Trang chủ Quỷ đỏ đã đăng tải dòng thông báo đạt thỏa thuận với Real Madrid trong thương vụ Raphael Varane.
+                        <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a>( tên miền website chính thức: <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88.com</span></a>)
+                        là một trong những nhà cái trực tuyến hàng đầu châu Á cung cấp đa dạng các trò chơi cá cược thú vị bao gồm cá cược thể thao, casino trực tuyến, slot game, xổ số…
                     </li>
                     <li>
-                        Manchester United đã xác nhận trên trang chủ câu lạc bộ họ đã đạt được thỏa thuận với Real Madrid về việc ký hợp đồng với Raphael Varane.
+                        <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> được điều hành bởi OG GLOBAL ACCESS LIMITED, được quy định và cấp phép tại Philippines kể từ ngày 1 tháng 3 năm 2019
+                        bởi PAGCOR.
                     </li>
+                    <li>Với mong muốn có thể cung cấp cho người chơi những trò chơi với nền tảng công nghệ trực tuyến hiện đại, chất lượng cao, mang lại trải nghiệm tốt nhất, <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a>                        đã hợp tác với rất nhiều đối tác là các công ty phần mềm trò chơi uy tín nhất thế giới hiện nay như One Works, Microgaming, Entwine, Crown Casino, Playtech, Betsoft, Gold Deluxe, Bodog…</li>
+                    <li><a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> cung cấp dịch vụ cá cược cho hơn 10,000 sự kiện thể thao hàng tháng, hơn 100 trò chơi casino khác nhau bao gồm baccarat,
+                        roulette… giúp người chơi có vô số sự lựa chọn khi tham gia tại đây.</li>
+                    <li>Trong suốt thời gian hoạt động của mình, nhà cái <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> đã giành được nhiều giải thưởng có giá trị như “ Nhà Điều hành Chơi game
+                        Trực Tuyến Châu Á của năm” “ Nhà Cái Châu Á của năm” vào hai năm liên tiếp 2009, 2010 được bình chọn bởi tại chí eGaming Review Magazine danh tiếng.</li>
                 </ul>
             </div>
-
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef/newsRef-01.jpg">
+                <img src="images/newsRef/betRef1-02.gif">
                 <p>Thông báo từ trang chủ Man Utd.</p>
             </div>
 
-            <!-- === 文章內容 === -->
-            <div class="newsRef_txt">
-                <ul>
-                    <li>
-                        Theo chuyên gia David Ornstein của The Athletic, trung vệ người Pháp sẽ ký hợp đồng bốn năm với Quỷ đỏ kèm điều khoản tự động gia hạn thêm một năm.
-                    </li>
-                </ul>
-            </div>
-
-            <!-- === 文章清單 === -->
-            <div class="newsRef_list">
-                <ul>
-                    <li>Xong vụ Varane, Man Utd xác định mục tiêu tiếp theo</li>
-                    <li>Lộ bí mật cuộc gặp với Ancelotti, Varane quyết định chia tay Real</li>
-                </ul>
+            <div class="newsRef_title">
+                <!-- 標題文字 -->
+                <p>Uy tín được cộng đồng ghi nhận cho Fun88</p>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Mức phí chuyển nhượng là 34 triệu bảng + các khoản phụ phí và phía Real Madrid sẽ phải trả khoản tiền đào tạo cho câu lạc bộ cũ của Varane là Lens, đội bóng đang thi đấu tại Ligue 1.
+                        Nhà cái<a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> cũng là một trong những nhà tài trợ lớn nhất của nhiều câu lạc bộ ngoại hạng Anh như Burnley F.C, Newcastle United
+                        F.C, Tottenham Hotspur F.C. Ngoài ra, Nhà Cái Hàng Đầu Châu Á<a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> còn ký hợp đồng Đại Sứ Thương Hiệu với các huyền thoại thể
+                        thao nổi tiếng như Robbie Fowler – Huyền Thoại Liverpool, Steve Nash – Siêu Sao Bóng Rổ MVP 2 năm liên tiếp, Kobe Bryant – Huyền Thoại Bóng Rổ Nhà Nghề Mỹ NBA. Việc hợp tác với những tên tuổi lớn trong ngành giải trí và thể thao
+                        chứng tỏ tầm vóc và độ tin cậy của<a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a>.
                     </li>
-                    <li>
-                        Như thông báo trên trang chủ Man Utd, ngày kiểm tra y tế chưa rõ ràng vì các hạn chế kiểm dịch ở nước Anh.
-                    </li>
-                    <li>
-                        Sở dĩ Real Madrid sẵn sàng bán Varane vào mùa hè này bởi vì anh sẽ hết hạn hợp đồng vào năm tới. Đội bóng Hoàng gia cũng cần cải thiện thu nhập do tác động tài chính từ đại dịch và chi phí mở rộng sân vận động Bernabeu.
-                    </li>
-                    <li>
-                        Về phía Varane, người đại diện của anh đã trực tiếp trao đổi với chủ tịch Florentino Perez về mong muốn tìm kiếm thách thức mới ngoài Tây Ban Nha thay vì ký gia hạn. Tân huấn luyện viên Carlo Ancelotti cũng nắm bắt được tình hình từ sớm nhưng ưu tiên
-                        của ông là giữ chân những ngôi sao trên hàng công như Gareth Bale và Eden Hazard. Hai cái tên Ancelotti kỳ vọng có thể hồi sinh cho mùa giải mới.
-                    </li>
-
+                    <li>Tính đến thời điểm hiện tại, nhà cái<a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> thu hút hàng trăm nghìn lượt truy cập mỗi tháng với số lượng thành viên đăng ký lên tới
+                        hàng trăm nghìn người và con số này vẫn tiếp tục gia tăng theo cấp số nhân.</li>
+                    <li>Để đăng ký tham gia thành viên của<a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> rất đơn giản, bạn chỉ cần truy cập các được link vào<a href="https://fun213213.com/euxc"
+                            target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> được cung cấp và điền đầy đủ thông tin được yêu cầu để xác minh danh tính và hỗ trợ cho quá trình chơi. Sau đó bạn tiến hành nạp tiền theo hướng dẫn trên
+                        website là có thể tham gia các trò chơi được cung cấp trên website<a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a>.</li>
+                    <li>Nếu bạn gặp khó khăn trong vấn đề đăng ký tài khoản hoặc nạp, rút tiền, bạn có thể liên hệ bộ phận hỗ trợ và chăm sóc khách hàng theo các hình thức Live chat, email, điện thoại…
+                        <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a> có đội ngũ hỗ trợ làm việc 24/7 sẽ giúp bạn giải quyết các thắc mắc ngay lập tức.</li>
                 </ul>
             </div>
 
-            <!-- === 文章圖片 === -->
-            <div class="newsRef_img">
-                <img src="images/newsRef/newsRef-02.jpg">
-                <p>Varane chọn Man Utd.</p>
+            <!-- 文章連結按鈕 -->
+            <div class="newsRef_btn">
+                <p>Casino trực tuyến</p>
+                <a href="https://fun213213.com/euxc" target="_blank">
+                    <div class="btn_linear_c1 btn">
+                        <div class="btn_cnt">Đăng Ký</div>
+                    </div>
+                </a>
             </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li>Cập bến Old Trafford, Varane nhiều khả năng sẽ đá ở vị trí trung vệ lệch phải như một đối tác với Harry Maguire. Điều đó đồng nghĩa, Victor Lindelof sẽ trở thành phương án xoay tua sau hai mùa giải chắc suất đá chính dưới thời Ole
-                        Gunnar Solskjaer.</li>
-                    <li>Quỷ đỏ đã gia hạn với Eric Bailly vào tháng tư nhưng những lo ngại về phong độ và thể lực của trung vệ người Bờ Biển Ngà vẫn tồn tại, trong khi tài năng trẻ Axel Tuanzebe không thể hiện đủ phẩm chất để chen chân vào đội hình chính.</li>
-                    <li>Phân tích dữ liệu về trận đấu của Varane tại Madrid chỉ ra những con số chứng minh anh là phiên bản nâng cấp của Lindelof. Sau quãng thời gian chinh chiến cho Los Blancos, Varane đã mang về bộ sưu tập 3 chức vô địch La Liga, 1 Copa
-                        del Rey, 3 siêu cúp TBN, 4 Champions League, 3 siêu cúp châu Âu, 4 FIFA Club World Cup.</li>
-                    <li>Đồ họa dưới đây sử dụng dữ liệu từ chuyên trang smarterscout để tạo hồ sơ của một cầu thủ, chấm điểm họ từ 0 đến 99 theo nhiều chỉ số khác nhau, liên quan đến tần suất cầu thủ hoàn thành một hành động theo phong cách nhất định so với
-                        những đồng nghiệp chơi cùng vị trí hoặc đánh giá mức độ hiệu quả của họ theo chỉ số tương ứng.</li>
-                </ul>
-            </div>
-            <div class="newsRef_img">
-                <img src="images/newsRef/newsRef-03.jpg">
-                <p>Đồ họa của Lindelof mùa 2020/21.</p>
-            </div>
-            <div class="newsRef_img">
-                <img src="images/newsRef/newsRef-04.jpg">
-                <p>Đồ họa của Eric Bailly.</p>
-            </div>
-            <div class="newsRef_img">
-                <img src="images/newsRef/newsRef-05.jpg">
-                <p>Đồ họa của Raphael Varane.</p>
-            </div>
-            <div class="newsRef_txt">
-                <ul>
-                    <li>Sự nâng cấp đáng kể nhất của Varane so với Lindelof và Bailly là điểm 72 trên 99 cho “tác động phòng ngự”, với 40 của Lindelof và 22 của Bailly. Chỉ số này chứng tỏ rằng Varane đọc trận đấu tốt để ngăn chặn đối phương tịnh tiến bóng
-                        và chủ động giành lại quyền sở hữu.</li>
-                    <li>Không có gì đáng ngạc nhiên với chỉ số giữ bóng của Varane với kinh nghiệm dày dặn ở Madrid và tuyển Pháp. Anh được đánh giá 84 điểm, một sự cải thiện so với số 74 của Lindelof và 63 của Bailly.</li>
-                </ul>
-            </div>
-            <div class="newsRef_img">
-                <img src="images/newsRef/newsRef-06.jpg">
-                <p>Varane vượt trội Lindelof và Bailly khoản không chiến.</p>
-            </div>
-            <div class="newsRef_txt">
-                <ul>
-                    <li>Varane cũng được chờ đợi có thể giải quyết lỗ hỏng của United ở hệ thống phòng ngự, vốn đã trở thành điểm yếu chí mạng mùa giải trước. Anh được chấm 75/99 điểm cho những cú đánh đầu từ tình huống cố định và 83/99 từ những tình huống
-                        mở ở La Liga 2020/21, trong khi Lindelof cho thấy mình dễ bị tổn thương khi phải đối mặt với các tiền đạo mạnh mẽ, trung vệ người Thụy Điển bị đánh giá thấp với chỉ 10 và 44 điểm ở hai chỉ số.</li>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    </li>
                 </ul>
             </div>
 
-            <!-- === 文章影片 === -->
-            <div class="newsRef_mv">
-                <p>Khả năng phòng ngự của Varane:</p>
-                <div>
-                    <iframe width="100%" src="https://www.youtube.com/embed/sYS3jk1yGkg" frameborder="0"></iframe>
-                </div>
-                <p>Thái Sơn | 00:41 28/07/2021</p>
-            </div>
         </div>
-
         <div class="newsRef_menu">
             <div class="newsRef_hot" id="newsRef_hot">
                 <div class="mainMsg-title">Tin hot</div>
