--- a/betRef/betRef_5.html
+++ b/betRef/betRef_5.html
@@ -18,12 +18,12 @@
                 <ul>
                     <li>
                         <li>
-                            <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">Nhà cái AE888</span></a>– Một trong những công ty được đăng ký hợp pháp của Costa Rica và được chính cơ quan này công nhận
-                            là một nhà cái uy tín, chất lượng và đáng tin cậy nhất. Mục tiêu của <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">AE888</span></a>là tạo ra một sân chơi giải trí chất
-                            lượng cao, đa dạng nhất thị trường cá cược trực tuyến. Mang lại cho người chơi sự lựa chọn hợp lý, thú vị cùng dịch vụ chăm sóc khách hàng nhanh chóng, tiện lợi và tận tình nhất. Trong thị trường trò chơi trực tuyến ngày càng
-                            sôi động và lớn mạnh, ngoài các trò chơi, an ninh mạng là vấn đề được khách hàng quan tâm đến nhiều nhất. Khi đến với <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;"> nhà cái AE888</span></a>,
-                            quý khách hãy yên tâm về những lo ngại đó bởi chúng tôi đã thành lập một trung tâm bảo mật mạng, đảm bảo tuyệt đối an ninh mạng của quý khách. Hơn nữa, AE888 đã được GEO TRUST công nhận và cấp chứng chỉ website an toàn nhất,
-                            toàn bộ thông tin của các thành viên đều được mã hóa để đảm bảo sự riêng tư tuyệt đối của người chơi.
+                            <span class="selfTxt" style="font-weight:bold;">VNC88.com</span><a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">Nhà cái AE888</span></a>– Một trong những công ty được đăng
+                            ký hợp pháp của Costa Rica và được chính cơ quan này công nhận là một nhà cái uy tín, chất lượng và đáng tin cậy nhất. Mục tiêu của <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">AE888</span></a>là
+                            tạo ra một sân chơi giải trí chất lượng cao, đa dạng nhất thị trường cá cược trực tuyến. Mang lại cho người chơi sự lựa chọn hợp lý, thú vị cùng dịch vụ chăm sóc khách hàng nhanh chóng, tiện lợi và tận tình nhất. Trong thị
+                            trường trò chơi trực tuyến ngày càng sôi động và lớn mạnh, ngoài các trò chơi, an ninh mạng là vấn đề được khách hàng quan tâm đến nhiều nhất. Khi đến với
+                            <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;"> nhà cái AE888</span></a>, quý khách hãy yên tâm về những lo ngại đó bởi chúng tôi đã thành lập một trung tâm bảo mật mạng, đảm bảo tuyệt đối an ninh mạng của quý khách. Hơn nữa, AE888 đã được GEO TRUST
+                            công nhận và cấp chứng chỉ website an toàn nhất, toàn bộ thông tin của các thành viên đều được mã hóa để đảm bảo sự riêng tư tuyệt đối của người chơi.
                         </li>
                     </li>
                 </ul>
@@ -80,20 +80,21 @@
                 <p>Dịch vụ khách hàng</p>
             </div>
 
-            <!-- === 文章清單 === -->
-            <div class="newsRef_list">
+            <!-- === 文章清單2 (列表序號) === -->
+            <div class="newsRef_list2">
+                <div class="title">Dịch vụ khách hàng</div>
+                <BR>
                 <ul>
-                    <li>1. Trong thị trường game cạnh tranh khốc liệt, AE888 vẫn luôn là lựa chọn duy nhất của nhiều người chơi. Bởi ngoài các sản phẩm giải trí mới lạ, thú vị chúng tôi còn mang đến cho người chơi một dịch vụ chăm sóc khách hàng nhanh chóng,
-                        thuận lợi, tận tụy và chuyên nghiệp nhất.
-                    </li>
+                    <li>Trong thị trường game cạnh tranh khốc liệt, AE888 vẫn luôn là lựa chọn duy nhất của nhiều người chơi. Bởi ngoài các sản phẩm giải trí mới lạ, thú vị chúng tôi còn mang đến cho người chơi một dịch vụ chăm sóc khách hàng nhanh chóng,
+                        thuận lợi, tận tụy và chuyên nghiệp nhất.</li>
 
-                    <li>2. Tương tác đa kênh : Với đa dạng các kênh liên lạc, đội ngũ chăm sóc khách hàng luôn sẵn sàng túc trực để hỗ trợ bạn kịp thời nhất.
-                    </li>
+                    <li>TTrong thị trường game cạnh tranh khốc liệt, AE888 vẫn luôn là lựa chọn duy nhất của nhiều người chơi. Bởi ngoài các sản phẩm giải trí mới lạ, thú vị chúng tôi còn mang đến cho người chơi một dịch vụ chăm sóc khách hàng nhanh chóng,
+                        thuận lợi, tận tụy và chuyên nghiệp nhất.</li>
 
-                    <li>3. Luôn mang lại sự bất ngờ và ngạc nhiên cho quý khách bởi các chương trình khuyến mãi hấp dẫn.</li>
+                    <li>Luôn mang lại sự bất ngờ và ngạc nhiên cho quý khách bởi các chương trình khuyến mãi hấp dẫn.</li>
+
                 </ul>
             </div>
-
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
                 <img src="images/newsRef/betRef5-02.jpg">
@@ -160,10 +161,21 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com 
-                </li>
-            </ul>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    </li>
+                </ul>
+            </div>
 
+        </div>
+        <div class="newsRef_menu">
+            <div class="newsRef_hot" id="newsRef_hot">
+                <div class="mainMsg-title">Tin hot</div>
+                <ul></ul>
+            </div>
+            <div class="newsRef_imp" id="newsRef_imp">
+                <div class="mainMsg-title">Tin quan trọng</div>
+                <ul></ul>
+            </div>
         </div>
     </div>
 </div>
