--- a/betRef/betRef_3.html
+++ b/betRef/betRef_3.html
@@ -13,10 +13,10 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Q8BET</span></a> là nhà cái trực tuyến cao cấp dành cho người chơi trên toàn cầu và có hàng triệu người chơi đã đăng ký. Các văn phòng
-                        và trung tâm dịch vụ khách hàng của chúng tôi được đặt khắp nơi trên thế giới và chúng tôi có giấy phép kinh doanh hợp pháp cho nhiều thị trường trong ngành công nghiệp trò chơi. Đồng thời, chúng tôi cung cấp các trò chơi đa dạng,
-                        dịch vụ khách hàng hoàn hảo và cam kết duy trì tính công bằng của trò chơi, để người chơi tiếp tục quay trở lại nền tảng của chúng tôi. Đảm bảo tính chính trực Là một trang web đánh bạc trực tuyến có thâm niên, sòng bài đã thực
-                        hiện tôn chỉ “lợi ích khách hàng là trên hết”, và chính điều này đã làm nên sức mạnh của công ty không ngừng lớn mạnh và phát triển.
+                        <span class="selfTxt" style="font-weight:bold;">VNC88.com</span><a href="https://www.q8vn.com/" target="_blank" rel="noopener"><span style="color:red;">Q8BET</span></a> là nhà cái trực tuyến cao cấp dành cho người chơi trên toàn
+                        cầu và có hàng triệu người chơi đã đăng ký. Các văn phòng và trung tâm dịch vụ khách hàng của chúng tôi được đặt khắp nơi trên thế giới và chúng tôi có giấy phép kinh doanh hợp pháp cho nhiều thị trường trong ngành công nghiệp
+                        trò chơi. Đồng thời, chúng tôi cung cấp các trò chơi đa dạng, dịch vụ khách hàng hoàn hảo và cam kết duy trì tính công bằng của trò chơi, để người chơi tiếp tục quay trở lại nền tảng của chúng tôi. Đảm bảo tính chính trực Là một
+                        trang web đánh bạc trực tuyến có thâm niên, sòng bài đã thực hiện tôn chỉ “lợi ích khách hàng là trên hết”, và chính điều này đã làm nên sức mạnh của công ty không ngừng lớn mạnh và phát triển.
                     </li>
                 </ul>
             </div>
@@ -61,11 +61,6 @@
                     </li>
             </div>
 
-            <!-- === 文章圖片 === -->
-            <div class="newsRef_img">
-                <img src="images/newsRef/betRef3-01.jpg">
-            </div>
-
             <!-- 文章連結按鈕 -->
             <div class="newsRef_btn">
                 <p>Casino trực tuyến</p>
@@ -76,13 +71,25 @@
                 </a>
             </div>
 
+
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com 
-                </li>
-            </ul>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    </li>
+                </ul>
+            </div>
 
+        </div>
+        <div class="newsRef_menu">
+            <div class="newsRef_hot" id="newsRef_hot">
+                <div class="mainMsg-title">Tin hot</div>
+                <ul></ul>
+            </div>
+            <div class="newsRef_imp" id="newsRef_imp">
+                <div class="mainMsg-title">Tin quan trọng</div>
+                <ul></ul>
+            </div>
         </div>
     </div>
 </div>
