--- a/betRef/betRef_4.html
+++ b/betRef/betRef_4.html
@@ -13,12 +13,11 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Được thành lập vào năm 2019, JBO (JUST BET ONLINE) là công ty giải trí trực tuyến cung cấp sản phẩm đa dạng như cược thể thao, esports và casino. JBO là website Cá Cược Trực Tuyến Chuyên Esports Đầu Tiên Tại Việt Nam, với mong muốn kết nối cộng đồng Esports
-                        và mang đến trải nghiệm giải trí vượt trội. JBO là một công ty chuyên nghiệp được ủy quyền và quản lý bởi chính phủ Philippines, có giấy phép kinh doanh trò chơi trực tuyến First Cagaya – cơ quan có thẩm quyền nhất ở Philippines.
-                        Do đó giao dịch tại website hoàn toàn minh bạch và an toàn. Mục tiêu của JBO là đảm bảo an toàn cũng như bảo vệ lợi ích cho thành viên tham gia tại Website. Tại JBO, bộ phận chăm sóc khách hàng chuyên nghiệp 24/7 sẽ giúp bạn giải
-                        đáp những thắc mắc khi tham gia tại website. Tự hào là Nhà Thể Thao và Esports Hàng Đầu Châu Á, JBO cung cấp hơn hàng ngàn trận đấu khác nhau mỗi ngày, bao gồm các giải đấu Esport lớn, sự kiện thể thao trong và ngoài nước, sòng
-                        bài (casino) trực tuyến. Với tiêu chí mang đến cho người chơi trải nghiệm giải trí tuyệt vời nhất tại website, JBO không ngừng nỗ lực cải thiện sản phẩm và nâng cấp dịch vụ để trở thành Website Cá Cược Thể Thao và Esport Hàng Đầu
-                        Châu Á.
+                        <span class="selfTxt" style="font-weight:bold;">VNC88.com</span>Được thành lập vào năm 2019, <span style="font-weight:bold;">JBO</span> (JUST BET ONLINE) là công ty giải trí trực tuyến cung cấp sản phẩm đa dạng như cược thể thao,
+                        esports và casino. <span style="font-weight:bold;">JBO</span> là website Cá Cược Trực Tuyến Chuyên Esports Đầu Tiên Tại Việt Nam, với mong muốn kết nối cộng đồng Esports và mang đến trải nghiệm giải trí vượt trội. <span style="font-weight:bold;">JBO</span>                        là một công ty chuyên nghiệp được ủy quyền và quản lý bởi chính phủ Philippines, có giấy phép kinh doanh trò chơi trực tuyến First Cagaya – cơ quan có thẩm quyền nhất ở Philippines. Do đó giao dịch tại website hoàn toàn minh bạch
+                        và an toàn. Mục tiêu của JBO là đảm bảo an toàn cũng như bảo vệ lợi ích cho thành viên tham gia tại Website. Tại JBO, bộ phận chăm sóc khách hàng chuyên nghiệp 24/7 sẽ giúp bạn giải đáp những thắc mắc khi tham gia tại website.
+                        Tự hào là Nhà Thể Thao và Esports Hàng Đầu Châu Á, JBO cung cấp hơn hàng ngàn trận đấu khác nhau mỗi ngày, bao gồm các giải đấu Esport lớn, sự kiện thể thao trong và ngoài nước, sòng bài (casino) trực tuyến. Với tiêu chí mang đến
+                        cho người chơi trải nghiệm giải trí tuyệt vời nhất tại website, JBO không ngừng nỗ lực cải thiện sản phẩm và nâng cấp dịch vụ để trở thành Website Cá Cược Thể Thao và Esport Hàng Đầu Châu Á.
                     </li>
                 </ul>
             </div>
@@ -105,17 +104,12 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        HIện nay trên thị trường có khá nhiều trang khác nhau tuy nhiên, để tìm được một địa chỉ tin cậy không phải là điều dễ dàng gì. Vì vậy tham gia vào một thương hiệu lâu đời như JBO VIỆT NAM cũng như được công nhận kinh doanh hợp pháp là một điều hoàn toàn
-                        an tâm dành cho bạn.
+                        HIện nay trên thị trường có khá nhiều trang khác nhau tuy nhiên, để tìm được một địa chỉ tin cậy không phải là điều dễ dàng gì. Vì vậy tham gia vào một thương hiệu lâu đời như <span style="font-weight:bold;">JBO VIỆT NAM</span>cũng
+                        như được công nhận kinh doanh hợp pháp là một điều hoàn toàn an tâm dành cho bạn.
                     </li>
                     <li>
                         Không chỉ mang đến một sân chơi chất lượng mà chúng tôi luôn đổi mới và cập nhật những trò chơi mới thú vị cho anh em. Ngoài ra các khuyến mãi dành cho người chơi trên trang luôn luôn có.
                     </li>
-            </div>
-
-            <!-- === 文章圖片 === -->
-            <div class="newsRef_img">
-                <img src="images/newsRef/betRef3-01.jpg">
             </div>
 
             <!-- 文章連結按鈕 -->
@@ -131,10 +125,21 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com 
-                </li>
-            </ul>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    </li>
+                </ul>
+            </div>
 
+        </div>
+        <div class="newsRef_menu">
+            <div class="newsRef_hot" id="newsRef_hot">
+                <div class="mainMsg-title">Tin hot</div>
+                <ul></ul>
+            </div>
+            <div class="newsRef_imp" id="newsRef_imp">
+                <div class="mainMsg-title">Tin quan trọng</div>
+                <ul></ul>
+            </div>
         </div>
     </div>
 </div>
