--- a/betRef/betRef_2.html
+++ b/betRef/betRef_2.html
@@ -18,17 +18,16 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">123BET</span></a>được thành lập vào năm 2012 và chuyên điều hành kinh doanh các hoạt động trò chơi khác nhau. Các sản phẩm và dịch vì
-                        trò chơi chúng tôi cung cấp được ủy quyền và giám sát bởi công ty cổ phần giải trí và nghỉ dưỡng First Cagayan ( www.firstcagayan.com ) tại đặc khu kinh tế soogn Cagayan của Philippines. Chúng tôi cung cấp các sản phẩm dịch vụ
-                        của chúng tôi cho các thành viên trong 24h trong ngày mỗi năm.
+                        <a href="https://https://8123b.com/" target="_blank"><span style="color:red;">123BET</span></a>được thành lập vào năm 2012 và chuyên điều hành kinh doanh các hoạt động trò chơi khác nhau. Các sản phẩm và dịch vì trò chơi chúng
+                        tôi cung cấp được ủy quyền và giám sát bởi công ty cổ phần giải trí và nghỉ dưỡng First Cagayan ( www.firstcagayan.com ) tại đặc khu kinh tế soogn Cagayan của Philippines. Chúng tôi cung cấp các sản phẩm dịch vụ của chúng tôi cho
+                        các thành viên trong 24h trong ngày mỗi năm.
                     </li>
                     <li>
-                        <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">123BET </span></a> hợp tác kỹ thuật chiều sâu với : CX, AG, BG, OG, CQ9, IBO,.v.v..để cùng xây dựng một nền tảng chơi game chất lượng
-                        cao. Công ty chúng tôi hiện sợ hữu giấy phép kinh doanh được đăng ký hợp pháp tại Philippines. Tất cả các hoạt động trò chơi của chúng tôi đều tuân thủ hiệp ước trò chơi của chính phủ Philippines. Trong thị trường cờ bạc trực tuyến
-                        phát triển ngày càng nóng, chúng tôi liên tục tìm kiểm sự đổi mới và thay đổi, tìm kiểm những ý tưởng mới nhất và đề cao chất lượng phục vụ lên hàng đầu. Mang đến cho khách hàng những dịch vụ, sản phẩm và gải trí hàng đầu với chất
-                        lượng tốt nhất là mục tiêu vĩnh cửu của chúng tôi.
+                        <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> hợp tác kỹ thuật chiều sâu với : CX, AG, BG, OG, CQ9, IBO,.v.v..để cùng xây dựng một nền tảng chơi game chất lượng cao. Công ty chúng tôi
+                        hiện sợ hữu giấy phép kinh doanh được đăng ký hợp pháp tại Philippines. Tất cả các hoạt động trò chơi của chúng tôi đều tuân thủ hiệp ước trò chơi của chính phủ Philippines. Trong thị trường cờ bạc trực tuyến phát triển ngày càng
+                        nóng, chúng tôi liên tục tìm kiểm sự đổi mới và thay đổi, tìm kiểm những ý tưởng mới nhất và đề cao chất lượng phục vụ lên hàng đầu. Mang đến cho khách hàng những dịch vụ, sản phẩm và gải trí hàng đầu với chất lượng tốt nhất là
+                        mục tiêu vĩnh cửu của chúng tôi.
                     </li>
-                    <li>Với mong muốn có thể cung cấp cho người chơi những trò chơi với nền tảng công nghệ trực tuyến hiện đại, chất lượng cao, mang lại trải nghiệm tốt nhất, <a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">Fun88</span></a>                        đã hợp tác với rất nhiều đối tác là các công ty phần mềm trò chơi uy tín nhất thế giới hiện nay như One Works, Microgaming, Entwine, Crown Casino, Playtech, Betsoft, Gold Deluxe, Bodog…</li>
                     <li>Là một nhà điều hành trò chơi cờ bạc trực tuyến chuyên nghiệp quốc tế uy tin hàng đầu mạng lưới chúng tôi luôn tuân thủ nguyên tắc ” tôi thà mất tiền ” và ” không thể phá vỡ lòng tin của tôi ” cung cấp cho toàn bộ khách hàng trò chơi
                         cá cược công bằng, an toàn cùng với toàn bộ các dịch vụ hoàn hảo nhất</li>
                 </ul>
@@ -50,9 +49,10 @@
                         Bạn có thể kiếm tiền với bất kì loại hình cá cược nào: Xổ số, thể thao, sòng bạc, casino, trò chơi ảo, poker, đánh cá, chọi gà… Đó chỉ là một trong số ít những game phong phú mà nhà cái này đang triển khai cho khách hàng của mình. Có đầy đủ các tỷ lệ
                         cược khác nhau, từ cược thể thao, cược sòng bài, các trò chơi slot game hấp dẫn.
                     </li>
-                    <li>Những trò chơi này được hiện đại hóa, cải tiến từ những trò chơi truyền thống, mang lại một cảm giác vừa mới mẻ vừa thân quen cho những người yêu thích các bộ môn giải trí trực tuyến. 123BET còn có các loại hình máy đánh bạc trực tuyến,
-                        trò chơi ảo. Giúp người chơi có những trải nghiệm đa dạng hơn khi tham gia vào nhà cái này.Những trò chơi này được hiện đại hóa, cải tiến từ những trò chơi truyền thống, mang lại một cảm giác vừa mới mẻ vừa thân quen cho những
-                        người yêu thích các bộ môn giải trí trực tuyến. 123B.Com còn có các loại hình máy đánh bạc trực tuyến, trò chơi ảo. Giúp khán giả có những trải nghiệm đa dạng hơn khi tham gia vào nhà cái này.</li>
+                    <li>Những trò chơi này được hiện đại hóa, cải tiến từ những trò chơi truyền thống, mang lại một cảm giác vừa mới mẻ vừa thân quen cho những người yêu thích các bộ môn giải trí trực tuyến.
+                        <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> còn có các loại hình máy đánh bạc trực tuyến, trò chơi ảo. Giúp người chơi có những trải nghiệm đa dạng hơn khi tham gia vào nhà cái này.Những
+                        trò chơi này được hiện đại hóa, cải tiến từ những trò chơi truyền thống, mang lại một cảm giác vừa mới mẻ vừa thân quen cho những người yêu thích các bộ môn giải trí trực tuyến. 123B.Com còn có các loại hình máy đánh bạc trực tuyến,
+                        trò chơi ảo. Giúp khán giả có những trải nghiệm đa dạng hơn khi tham gia vào nhà cái này.</li>
                 </ul>
             </div>
 
@@ -70,13 +70,13 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Không hề thua kém nhà cái uy tín khác trên thị trường về nội dung của các chương trình khuyến mãi. Những thành viên tham gia chơi tại 123BET sẽ có cơ hội nhận được các phần quà khủng lên tới hàng chục triệu đồng. Người chơi có thể tham gia vào các chương
-                        trình khuyến mãi nổi bật như:
+                        Không hề thua kém nhà cái uy tín khác trên thị trường về nội dung của các chương trình khuyến mãi. Những thành viên tham gia chơi tại <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> sẽ có
+                        cơ hội nhận được các phần quà khủng lên tới hàng chục triệu đồng. Người chơi có thể tham gia vào các chương trình khuyến mãi nổi bật như:
                     </li>
-                    <li>Hoàn tiền hằng ngày không giới hạn, không kể thắng thua lên tới 1%: Với chương trình này, bạn sẽ được hoàn 1 % tổng số tiền cược không kể thằng thua mỗi ngày. Thời gian sẽ được bắt đầu từ ngày 3 tháng 10 năm 2020 và sẽ kết thúc khi
-                        có thông báo chính thức của nhà cái.</li>
-                    <li>Khuyến mãi 150% slots: Từ ngày 1/8/2020, chương trình khuyến mãi này đã được triển khai cho các khách hàng của 123BET. Tuy nhiên ưu đãi này chỉ được giới hạn cho các trò chơi nổ hũ, và chỉ được áp dụng cho lần nạp thẻ đầu tiên với
-                        mệnh giá thẻ nạp thấp nhất là 200.000 đồng. Số tiền thưởng tối đa mà khách hàng có thể nhận được sẽ lên tới 8.888.000đ.</li>
+                    <li><span style="font-weight:bold;">Hoàn tiền hằng ngày không giới hạn, không kể thắng thua lên tới 1%: </span>Với chương trình này, bạn sẽ được hoàn 1 % tổng số tiền cược không kể thằng thua mỗi ngày. Thời gian sẽ được bắt đầu từ ngày
+                        3 tháng 10 năm 2020 và sẽ kết thúc khi có thông báo chính thức của nhà cái.</li>
+                    <li><span style="font-weight:bold;">Khuyến mãi 150% slots: </span>Từ ngày 1/8/2020, chương trình khuyến mãi này đã được triển khai cho các khách hàng của <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a>.
+                        Tuy nhiên ưu đãi này chỉ được giới hạn cho các trò chơi nổ hũ, và chỉ được áp dụng cho lần nạp thẻ đầu tiên với mệnh giá thẻ nạp thấp nhất là 200.000 đồng. Số tiền thưởng tối đa mà khách hàng có thể nhận được sẽ lên tới 8.888.000đ.</li>
                     <li>Ngoài hai chương trình khuyến mãi nội bật kể trên, khách hàng còn có thể hưởng những ưu đãi từ việc giới thiệu bạn bè, mừng sinh nhật. Hay khuyến mãi riêng cho từng chuyên mục như game bài, xổ số, khuyến mãi cho thành viên mới…</li>
                 </ul>
             </div>
@@ -95,11 +95,11 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        23BET hiểu được rằng, muốn giữ được chân khách hàng thì cần phải tạo yếu tố niềm tin, yên tâm cho những khách hàng tham gia cá cược. Chính vì thế mỗi giao dịch ngân hàng và thanh toán của khách hàng khi chơi cá cược trực tuyến tại đây luôn được đảm bảo
-                        tối đa nhất.
+                        <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> hiểu được rằng, muốn giữ được chân khách hàng thì cần phải tạo yếu tố niềm tin, yên tâm cho những khách hàng tham gia cá cược. Chính vì thế
+                        mỗi giao dịch ngân hàng và thanh toán của khách hàng khi chơi cá cược trực tuyến tại đây luôn được đảm bảo tối đa nhất.
                     </li>
                     <li>Các giao dịch này sẽ được thực hiện theo chuẩn mã hoá SSL 128Bit. Khách hàng sẽ được cung cấp những mật khẩu đăng nhập một lần khi thực hiện các thao tác liên quan. Chính vì thế thông tin bảo mật luôn được đảm bảo một cách tối đa.</li>
-                    <li>Với những thông tin đăng nhập của khách hàng cũng được 123BET lưu trữ, tuân thủ nguyên tắc không tiết lộ cho bất kỳ bên thứ ba.</li>
+                    <li>Với những thông tin đăng nhập của khách hàng cũng được <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> lưu trữ, tuân thủ nguyên tắc không tiết lộ cho bất kỳ bên thứ ba.</li>
                 </ul>
             </div>
             <div class="newsRef_title">
@@ -111,7 +111,8 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Một điểm đặc biệt của nhà cái 123BET đang triển khai là khách hàng vừa hưởng những quyền lợi đặc biệt khi tham gia cá cược tại đây, đồng thời cũng cần thực hiện những trách nhiệm của người chơi.
+                        Một điểm đặc biệt của nhà cái <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> đang triển khai là khách hàng vừa hưởng những quyền lợi đặc biệt khi tham gia cá cược tại đây, đồng thời cũng
+                        cần thực hiện những trách nhiệm của người chơi.
                     </li>
                 </ul>
             </div>
@@ -124,8 +125,8 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Cụ thể, 123BET có những nguyên tắc cơ bản. Yêu cầu người chơi luôn tuân thủ một cách nghiêm ngặt. Hội viên khi tham gia chơi tại 123BET cần đủ 18 tuổi để có thể chịu trách nhiệm với các hoạt động của mình, tham gia cá cược có trách nhiệm, 123BET khuyến
-                        khích khách hàng biết cách xây dựng ngân sách và chỉ nên tham gia cả cược trong khoản ngân sách đưa ra.
+                        Cụ thể, <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> có những nguyên tắc cơ bản. Yêu cầu người chơi luôn tuân thủ một cách nghiêm ngặt. Hội viên khi tham gia chơi tại <a href="https://8123b.com/"
+                            target="_blank"><span style="color:red;">123BET </span></a> cần đủ 18 tuổi để có thể chịu trách nhiệm với các hoạt động của mình, tham gia cá cược có trách nhiệm, <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a>                        khuyến khích khách hàng biết cách xây dựng ngân sách và chỉ nên tham gia cả cược trong khoản ngân sách đưa ra.
                     </li>
                     <li>Đặc biệt, với bất kỳ hành vi bào khuyến mãi nào sẽ bị nhà cái khóa tài khoản ngay lập tức mà không cần thông báo trước. Đây là những quy định nghiêm ngặt nhằm tạo ra một môi trường cá cược lành mạnh cho tất cả những người đang tham
                         gia tại nhà cái này</li>
@@ -141,11 +142,12 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        Với những ưu điểm và các chính sách kể trên, 123B Bet đã tạo nên một môi trường cá cược tuyệt vời và nhận về nhiều đánh giá tốt từ khách hàng đã tham gia trải nghiệm. Bên cạnh sự đa dạng của các sản phẩm cá cược, là một hệ thống chăm sóc khách hàng được
-                        đào tạo bài bản, chuyên nghiệp nhằm mang lại những trải nghiệm tuyệt vời cho những người tham gia. Bạn sẽ được hỗ trợ trong bất kỳ mọi thời gian nào với đội ngũ hỗ trợ sẵn sàng phục vụ 24/7
+                        Với những ưu điểm và các chính sách kể trên, <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> đã tạo nên một môi trường cá cược tuyệt vời và nhận về nhiều đánh giá tốt từ khách hàng đã tham
+                        gia trải nghiệm. Bên cạnh sự đa dạng của các sản phẩm cá cược, là một hệ thống chăm sóc khách hàng được đào tạo bài bản, chuyên nghiệp nhằm mang lại những trải nghiệm tuyệt vời cho những người tham gia. Bạn sẽ được hỗ trợ trong
+                        bất kỳ mọi thời gian nào với đội ngũ hỗ trợ sẵn sàng phục vụ 24/7
                     </li>
-                    <li>123BET đang có những chương trình khuyến mãi đặc biệt dành cho khách hàng mới, vì thế nếu bạn muốn tham gia trải nghiệm nhà cái này thì đây chắc chắn là một thời điểm vô cùng thích hợp. Hãy chia sẻ cảm nhận của bạn với chúng tôi về
-                        nhà cái này nhé.</li>
+                    <li><a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> đang có những chương trình khuyến mãi đặc biệt dành cho khách hàng mới, vì thế nếu bạn muốn tham gia trải nghiệm nhà cái này thì đây chắc chắn
+                        là một thời điểm vô cùng thích hợp. Hãy chia sẻ cảm nhận của bạn với chúng tôi về nhà cái này nhé.</li>
                 </ul>
             </div>
 
@@ -157,18 +159,9 @@
             <!-- === 文章清單 === -->
             <div class="newsRef_list">
                 <ul>
-                    <li>Bước 1: Truy cập vào trang web 123BET hoặc click vào chữ Đăng Ký chọn mục ĐĂNG KÝ </li>
+                    <li>Bước 1: Truy cập vào trang web <a href="https://8123b.com/" target="_blank"><span style="color:red;">123BET </span></a> hoặc click vào chữ Đăng Ký chọn mục <a href="https://8123b.com/" target="_blank"><span style="color:red;">ĐĂNG KÝ </span></a>                        </li>
                     <li>Bước 2: Điền đầy đủ các thông tin theo bảng yêu cầu, bao gồm: Tên tài khoản, mật khẩu, xác nhận lại mật khẩu, chọn đơn vị tiền, số điện thoại, giới thiệu, mã xác nhận.</li>
                     <li>Bước 3: Kiểm tra lại một lượt các thông tin cho chính xác, sau đó chọn ĐỒNG Ý để hoàn tất.</li>
-                </ul>
-            </div>
-
-            <!-- === 文章內容 === -->
-            <div class="newsRef_txt">
-                <ul>
-                    <li>
-                        Nếu bạn đã có tài khoản 123BET thì có thể bỏ qua phần này, chỉ cần chọn ĐĂNG NHẬP theo đúng tên tài khoản và mật khẩu đã đặt là được.
-                    </li>
                 </ul>
             </div>
 
