--- a/index.html
+++ b/index.html
@@ -233,22 +233,22 @@
                 <div class="flexAd">
                     <ul>
                         <li>
-                            <img src="./images/adBanner/ad1.gif">
+                            <img src="images/adBanner/ad1.gif">
                         </li>
                         <li>
-                            <img src="./images/adBanner/ad2.gif">
+                            <img src="images/adBanner/ad2.gif">
                         </li>
                         <li>
-                            <img src="./images/adBanner/adBanner-03.jpg">
+                            <img src="images/adBanner/adBanner-03.jpg">
                         </li>
                         <li>
-                            <img src="./images/adBanner/adBanner-04.jpg">
+                            <img src="images/adBanner/adBanner-04.jpg">
                         </li>
                         <li>
-                            <img src="./images/adBanner/adBanner-05.jpg">
+                            <img src="images/adBanner/adBanner-05.jpg">
                         </li>
                         <li>
-                            <img src="./images/adBanner/adBanner-05.jpg">
+                            <img src="images/adBanner/adBanner-05.jpg">
                         </li>
                     </ul>
                 </div>
