--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/all.css">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
     <!-- 外掛插件 -->
     <script src="js/swipeslider.js"></script>
     <script src="js/marquee.js"></script>
@@ -16,6 +17,7 @@
     <script src="js/verifyCode.js"></script>
     <!-- 自訂義js -->
     <script src="js/index.js"></script>
+    <script src="js/pageData.js"></script>
     <title>VNC88</title>
 
 </head>
